# lolrofl-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROFLFormat.adoc  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: pages.yml  release.yml  rust.yml
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
lolrofl/: all.html  enum.Errors.html  index.html  sidebar-items.js  struct.Rofl.html
lolrofl/error/: enum.Errors.html
lolrofl/iter/: index.html  sidebar-items.js  struct.PayloadIterator.html  struct.SegmentIterator.html
lolrofl/iter/payload/: struct.PayloadIterator.html
lolrofl/iter/segment/: struct.SegmentIterator.html
lolrofl/model/: index.html  sidebar-items.js  struct.BinHeader.html  struct.PayloadHeader.html  struct.Segment.html
lolrofl/model/binheader/: struct.BinHeader.html
lolrofl/model/payload/: struct.PayloadHeader.html
lolrofl/model/section/: enum.PacketTime.html  index.html  sidebar-items.js  struct.GenericSection.html  trait.SectionCore.html
lolrofl/model/segment/: struct.Segment.html
src/: error.rs  iter.rs  lib.rs  model.rs  segments.rs  test.rs
src/iter/: payload.rs  segment.rs
src/lolrofl/: error.rs.html  iter.rs.html  lib.rs.html  model.rs.html
src/lolrofl/iter/: payload.rs.html  segment.rs.html
src/lolrofl/model/: binheader.rs.html  payload.rs.html  section.rs.html  (+1 more)
src/model/: binheader.rs  payload.rs  section.rs  segment.rs
(+8 files in other folders)
