[package]
name = "lolrofl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'lolrofl'
required-features = ["clap", "json", "payload"]

[features]
default = ["payload"]
payload = ["blowfish", "flate2", "base64"]
  
[dependencies]
byteorder = {version = "^1.4.3"}

# Map payload decryption key
[dependencies.base64]
version = "^0.13.0"
optional = true

# Decrypt payloads
[dependencies.blowfish]
version = "^0.9.1"
optional = true

# Dezip payload
[dependencies.flate2]
# TODO: test if one of the dependencies can be dropped
version = "^1.0.24"
optional = true

### Executables dependencies

# Metadata parser in executables
[dependencies.json]
version = "^0.12.4"
optional = true

# Command-line parser for executables
[dependencies.clap]
version = "^3.1.18"
features = ["derive"]
optional = true
